--- a/webautopro/index.html
+++ b/webautopro/index.html
@@ -4,69 +4,67 @@
 <head>
   <meta charset="UTF-8">
   <title>AUTOPRO</title>
-  
-  
   <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
 
 <body>
-<h1 style="text-align: center">AUTOPRO</h1>
-  <div class="login-wrap">
-	<div class="login-html">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Iniciar Session</label>
-		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Regístrate</label>
-		<div class="login-form">
-			<div class="sign-in-htm">
-				<div class="group">
-					<label for="user" class="label">Email</label>
-					<input id="in_userEmail" type="text" class="input">
+	<h1 style="text-align: center"><a href="index.html">AUTOPRO</a></h1>
+	  <div class="login-wrap">
+		<div class="login-html">
+			<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Iniciar Sesión</label>
+			<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Regístrate</label>
+			<div class="login-form">
+				<div class="sign-in-htm">
+					<div class="group">
+						<label for="user" class="label">Correo Electrónico</label>
+						<input id="in_userEmail" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Contraseña</label>
+						<input id="in_pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<input id="check" type="checkbox" class="check" checked>
+						<label for="check"><span class="icon"></span> Mantenerme registrado</label>
+					</div>
+					<div class="group">
+						<input type="submit" class="button" id="b_iniciarSession" value="Iniciar Sesión" onclick="onclick_b_iniciarSession()">
+					</div>
+					<div class="hr"></div>
+					<div class="foot-lnk">
+						<a href="forgot.html">¿Se te olvidó tu contraseña?</a>
+					</div>
 				</div>
-				<div class="group">
-					<label for="pass" class="label">Contraseña</label>
-					<input id="in_pass" type="password" class="input" data-type="password">
-				</div>
-				<div class="group">
-					<input id="check" type="checkbox" class="check" checked>
-					<label for="check"><span class="icon"></span> Keep me Signed in</label>
-				</div>
-				<div class="group">
-					<input type="submit" class="button" id="b_iniciarSession" value="Iniciar Session" onclick="onclick_b_iniciarSession()">
-				</div>
-				<div class="hr"></div>
-				<div class="foot-lnk">
-					<a href="#forgot">Forgot Password?</a>
-				</div>
-			</div>
-			<div class="sign-up-htm">
-				<div class="group">
-					<label for="user" class="label">Username</label>
-					<input id="user" type="text" class="input">
-				</div>
-				<div class="group">
-					<label for="pass" class="label">Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
-				</div>
-				<div class="group">
-					<label for="pass" class="label">Repeat Password</label>
-					<input id="pass" type="password" class="input" data-type="password">
-				</div>
-				<div class="group">
-					<label for="pass" class="label">Email Address</label>
-					<input id="pass" type="text" class="input">
-				</div>
-				<div class="group">
-					<input type="submit" class="button" id="b_registrarse" value="Registrase" onclick="onclick_b_registrarme()">
-				</div>
-				<div class="hr"></div>
-				<div class="foot-lnk">
-					<label for="tab-1">Already Member?</a>
+				<div class="sign-up-htm">
+					<div class="group">
+						<label for="user" class="label">Nombre</label>
+						<input id="user" type="text" class="input">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Contraseña</label>
+						<input id="pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Repite la contraseña</label>
+						<input id="pass" type="password" class="input" data-type="password">
+					</div>
+					<div class="group">
+						<label for="pass" class="label">Dirección de correo electrónico</label>
+						<input id="pass" type="text" class="input">
+					</div>
+					<div class="group">
+						<input type="submit" class="button" id="b_registrarse" value="Registrase" onclick="onclick_b_registrarme()">
+					</div>
+					<div class="hr"></div>
+					<div class="foot-lnk">
+						<label for="tab-1">¿Ya eres miembro?</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 </body>
 
